# Test-Veille

./: README.md  TpFinal-test.docx
TestJava/fetest/: package-lock.json
TestJava/fetest/src/: App.js
TestJava/src/main/java/org/example/testjava/: TestLuminositer.java  TestReact.java  TestRedimensionnement.java  TestRotationImage.java  TestTriImage.java
TestJava/src/main/java/org/example/testjava/controler/: ImageController.java  Message.java
TestJava/src/main/java/org/example/testjava/model/: Image.java
TestJava/src/main/java/org/example/testjava/repository/: ImageRepository.java
TestJava/src/main/java/org/example/testjava/service/: ImageService.java
testRust/: .env  Cargo.toml  diesel.toml  package-lock.json
testRust/migrations/2024-11-11-074009_TestRust/: up.sql
testRust/rust_test/: package-lock.json  package.json
testRust/rust_test/src/: App.js
testRust/src/: main.rs  test_baisse_luminositer.rs  test_connexion_rust.rs  test_redimension_image.rs  test_rotation_image.rs  test_tri_filtre.rs
testRust/src/controler/: image_controler.rs  mod.rs
testRust/src/convertion/: schema.rs
testRust/src/model/: image.rs
testRust/src/service/: image_service.rs
